--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -16,6 +16,7 @@
     <string name="audio">Audios</string>
     <string name="pais">País:</string>
     <string name="logout">Salir</string>
+    <string name="config">Configuración</string>
 
 
 </resources>
