--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -13,8 +13,15 @@
     <string name="informacion">Información</string>
     <string name="videos">Videos</string>
     <string name="fotos">Imágenes</string>
-    <string name="audio">Audios</string>
+    <string name="audio">Audio</string>
     <string name="pais">País:</string>
+    <string name="clasificacion">Clasificación: </string>
+    <string name="costo">Costo: </string>
+    <string name="apertura">Hora apertura: </string>
+    <string name="cierre">Hora cierre: </string>
+    <string name="duracion">Duración: </string>
+    <string name="rating">Rating: </string>
+    <string name="votos">Votos: </string>
     <string name="logout">Salir</string>
     <string name="config">Configuración</string>
 
