--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="buscar_cercanos">Buscar atracciones cercanas</string>
+    <string name="cercanoTitle">Atracciones cercanas</string>
     <string name="atracciones">Atracciones</string>
+    <string name="atraccion">Atracción</string>
     <string name="recorridos">Recorridos</string>
     <string name="ciudades">Ciudades</string>
     <string name="ubicarme">Ubicarme</string>
@@ -25,6 +27,7 @@
     <string name="votos">Votos: </string>
     <string name="logout">Salir</string>
     <string name="config">Configuración</string>
+    <string name="radio">Radio de búsqueda</string>
     <string name="noPlano">No hay ningún plano para mostrar.</string>
     <string name="noAudio">No hay ningún audio para escuchar.</string>
     <string name="noVideo">No hay ningún video para ver.</string>
