cambio moneda y costo por costo_monda y costo_monto

--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -20,6 +20,7 @@
     <string name="pais">País:</string>
     <string name="clasificacion">Clasificación: </string>
     <string name="costo">Costo: </string>
+    <string name="moneda">Moneda: </string>
     <string name="apertura">Hora apertura: </string>
     <string name="cierre">Hora cierre: </string>
     <string name="duracion">Duración: </string>
