--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TripTP</string>
+    <string name="facebook_app_id">1425318657511217</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -8,7 +9,7 @@
     <string name="cercanoTitle">Atracciones cercanas</string>
     <string name="atracciones">Atracciones</string>
     <string name="atraccion">Atracción</string>
-    <string name="recorridos">Recorridos</string>
+    <string name="recorridos">Mapa</string>
     <string name="ciudades">Ciudades</string>
     <string name="ubicarme">Ubicarme</string>
     <string name="favoritos">Favoritos</string>
