--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -56,6 +56,8 @@
     <string name="no_comment_alert">Se el primero en hacer una reseña.</string>
     <string name="add_favorite">Agregar a favaritos.</string>
     <string name="rem_favorite">Eliminar de favoritos.</string>
+    <string name="fav_post_err">No se pudo guardar el Favorito, intenta mas tarde.</string>
+    <string name="fav_post_succ">Guardado en favoritos.</string>
 
 
 
