--- a/client/MyApplication/app/src/main/res/values/strings.xml
+++ b/client/MyApplication/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="no_comment_alert">Be the first to review.</string>
     <string name="add_favorite">Add to favorites.</string>
     <string name="rem_favorite">Remove from favorites.</string>
+    <string name="fav_post_err">Cannot save favorites at the moment, try later.</string>
+    <string name="fav_post_succ">Favorite save!.</string>
 
 
 </resources>
