--- a/client/MyApplication/app/src/main/res/values/strings.xml
+++ b/client/MyApplication/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="probar">Try it</string>
 
     <string name="buscar_cercanos">Nearby</string>
+    <string name="acciones">Actions</string>
     <string name="cercanoTitle">Nearby attractions</string>
     <string name="atracciones">Attractions</string>
     <string name="atraccion">Attraction</string>
