--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -8,6 +8,7 @@
     <string name="probar">Probar</string>
 
     <string name="buscar_cercanos">Buscar atracciones cercanas</string>
+    <string name="acciones">Acciones</string>
     <string name="cercanoTitle">Atracciones cercanas</string>
     <string name="atracciones">Atracciones</string>
     <string name="atraccion">Atracción</string>
