--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -59,6 +59,7 @@
     <string name="rem_favorite">Eliminar de favoritos.</string>
     <string name="fav_post_err">No se pudo guardar el Favorito, intenta mas tarde.</string>
     <string name="fav_post_succ">Guardado en favoritos.</string>
+    <string name="back">Volver</string>
 
 
 
