--- a/client/MyApplication/app/src/main/res/values/strings.xml
+++ b/client/MyApplication/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="rem_favorite">Remove from favorites.</string>
     <string name="fav_post_err">Cannot save favorites at the moment, try later.</string>
     <string name="fav_post_succ">Favorite save!.</string>
+    <string name="back">Back</string>
 
 
 </resources>
