--- a/client/MyApplication/app/src/main/res/values/strings.xml
+++ b/client/MyApplication/app/src/main/res/values/strings.xml
@@ -63,6 +63,9 @@
     <string name="fav_post_err">Cannot save favorites at the moment, try later.</string>
     <string name="fav_post_succ">Favorite save!.</string>
     <string name="back">Back</string>
+    <string name="mapa">Map</string>
+    <string name="addToFavs">Added to Favorites.</string>
+
 
 
 </resources>
