--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -68,6 +68,8 @@
     <string name="mapa">Mapa</string>
     <string name="addToFavs">Agregado a Favoritos.</string>
     <string name="addToVisit">Agregado a Visitados.</string>
+    <string name="please_wait">Por favor espere…</string>
+
 
 
 
