--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -66,6 +66,7 @@
     <string name="fav_post_succ">Guardado en favoritos.</string>
     <string name="back">Volver</string>
     <string name="mapa">Mapa</string>
+    <string name="interest">Interes</string>
     <string name="addToFavs">Agregado a Favoritos.</string>
     <string name="addToVisit">Agregado a Visitados.</string>
     <string name="please_wait">Por favor espere…</string>
