Closes #190  Closes #197 Closes #198
+ agrego action bar button back
+ recorrido lista de atracciones es textview

--- a/client/MyApplication/app/src/main/res/values-es/strings.xml
+++ b/client/MyApplication/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,7 @@
     <string name="atracciones">Atracciones</string>
     <string name="atraccion">Atracción</string>
     <string name="recorridos">Recorridos</string>
+    <string name="recorrido">Recorrido</string>
     <string name="ciudades">Ciudades</string>
     <string name="ubicarme">Ubicarme</string>
     <string name="favoritos">Favoritos</string>
