--- a/client/MyApplication/app/src/main/res/values/strings.xml
+++ b/client/MyApplication/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="atracciones">Attractions</string>
     <string name="atraccion">Attraction</string>
     <string name="recorridos">Tours</string>
+    <string name="recorrido">Tour</string>
     <string name="ciudades">Cities</string>
     <string name="ubicarme">Where am I?</string>
     <string name="favoritos">Favorites</string>
